--- a/Bibliographie/Bibliographie.bib
+++ b/Bibliographie/Bibliographie.bib
@@ -36,3 +36,50 @@
   organization = {IEEE},
   url = {https://python-control.org}
 }
+
+@bachlorsthesis{Bachlorsthesis,
+	author = {David Stoll},
+	title = {Development of a Robot-in-the-Loop Testbed for
+Cooperative Learning in Multi-Agent Systems},
+	school = {Hochschule Karlsruhe - Technik und Wirtschaft},
+	year = {2021},
+	type = {Bachelorarbeit}
+}
+
+@MastersThesis{MastersThesis,
+	author = {Michael Meindl},
+	title = {Development and Iterative Learning Control of a
+Two-Wheeled Inverted Pendulum Robot},
+	school = {Hochschule Karlsruhe - Technik und Wirtschaft},
+	year = {2019},
+	type = {Masterarbeit}
+}
+
+@article{kim2015dynamic,
+  title={Dynamic modeling and control of a two-wheeled inverted pendulum mobile robot},
+  author={Kim, Hyun-Soo and Kim, Jong-Hwan},
+  journal={IEEE Transactions on Control Systems Technology},
+  volume={24},
+  number={1},
+  pages={1--14},
+  year={2015},
+  publisher={IEEE}
+}
+
+%handel boston dynamics picture website link https://www.bostondynamics.com/handle
+@misc{handle,
+  title={Handle},
+  author={Boston Dynamics},
+  year={2021},
+  howpublished={\url{https://www.bostondynamics.com/handle}},
+  note={Accessed: 2021-08-01}
+}
+% Ascento robot A two-wheeled jumping robot
+@inproceedings{klemm2019ascento,
+  title={Ascento: A two-wheeled jumping robot},
+  author={Klemm, Victor and Morra, Alessandro and Salzmann, Ciro and Tschopp, Florian and Bodie, Karen and Gulich, Lionel and K{\"u}ng, Nicola and Mannhart, Dominik and Pfister, Corentin and Vierneisel, Marcus and others},
+  booktitle={2019 International Conference on Robotics and Automation (ICRA)},
+  pages={7515--7521},
+  year={2019},
+  organization={IEEE}
+}
