--- a/Content/BodyMatter.tex
+++ b/Content/BodyMatter.tex
@@ -17,8 +17,8 @@
 \input{Content/Modelling and Simulation}
 \input{Content/Mechanical Assembly}
 \input{Content/Firmware and Testing}
-\input{Content/Safety}
-\input{Content/Design}
+%\input{Content/Safety}
+%\input{Content/Design}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
 % Conclude Body Matter
