--- a/Content/Electronic Design.tex
+++ b/Content/Electronic Design.tex
@@ -156,6 +156,7 @@ UART is used to communicate between the microcontroller and the raspberry pi.
 %	\item Describe the layout and design of any custom PCBs used in the project.
 %	\item Include information about PCB fabrication and assembly processes.
 %\end{itemize}
+\newpage
 \section{Power Management}
 %figure of the power mangment board
 \begin{figure}[h]
