--- a/Content/Mechanical Design.tex
+++ b/Content/Mechanical Design.tex
@@ -229,9 +229,14 @@ This link connects the knee axis to the wheel axis. The design of this link incl
 	\label{fig:robotassembly3}
 \end{figure}
 \subsection{Boards Mounting rack}
-\subsection{safety considerations}
+\subsection{Safety considerations}
 % the motor cover, the face shield of the body and the body cover
+Safety is a crucial aspect to consider in the design of the robot. The robot is designed to be safe to operate in the environment and safe to interact with humans. Clearences are considered in the design to make sure that moving parts wouldn't interfere with eachother.
+The motor cover is designed to protect the motor from any external objects that might interfere with the motor operation.
+%Two subfigures side by side of the motor cover
 
+The face shield of the body is designed to protect the components inside the body from any external objects that might hit the robot.
+%two subfigures side by side of the face shield
 
 
 
