--- a/FrontBackMatter/Titlepage.tex
+++ b/FrontBackMatter/Titlepage.tex
@@ -108,7 +108,7 @@
 					
 					\vfill
 					% hier kommt eine hübsche Grafik hin:
-					\includegraphics[width = 80mm]{Figures/title/Capture.PNG}
+					\includegraphics[width = 80mm]{Figures/title/Robot_Assembly_3}
 					
 					
 					\vfill }
