--- a/FrontBackMatter/selbst.tex
+++ b/FrontBackMatter/selbst.tex
@@ -29,7 +29,8 @@ Registration no.: & \Matrikelnummer \\ % Matrikelnummer
 Thesis title: 		& \TitelDerArbeit \\
 \\
 Type of thesis: 	& \ArtDerArbeit\\
-Study program: 		& Mechanical Engineering\\ % Please Choose:
+Study program: 		& International Mechatronics\\ %
+%Mechanical Engineering\\ % Please Choose:
 Submission date:	& \Datum \\
 \\
 First examiner : 	& \Erstpruefer\\
