--- a/Settings/Projekteinstellungen.tex
+++ b/Settings/Projekteinstellungen.tex
@@ -13,13 +13,14 @@
 \newcommand{\Matrikelnummer}%       % Matriculation number
 {10044038}
 \newcommand{\Datum}%                % Submission date
-{14. January 2024}
+{15. January 2024}
 
 \newcommand{\TitelDerArbeit}%       % Title of the work
 {Design and Control of a Multi-Joint Two-Wheeled Inverted Pendulum Robot for Agile Motion Learning}
 
 \newcommand{\Kennnummer}%           % Here enter the identifier number of the work. You will receive this shortly before submission from your supervisor
-{M-MM/JJJJ-XXXXX}
+%{M-MM/JJJJ-XXXXX}
+{15-01/2024-1234}
 %{M-Month/Year-Number}
 
 \newcommand{\ArtDerArbeit}%         % Type of work. Please enter whether Master's thesis, Bachelor's thesis, or study thesis
